# trace-ui

./: .gitignore  Cargo.toml  README.md  build.sh
crates/trace-cli/: Cargo.toml
crates/trace-cli/src/: main.rs
crates/trace-core/: Cargo.toml
crates/trace-core/src/: api_types.rs  browse.rs  cache.rs  chunk_scan.rs  error.rs  lib.rs  line_index.rs  merge.rs  parallel.rs  parallel_types.rs  phase2.rs  scan_unified.rs  scanner.rs  session.rs  utils.rs
crates/trace-core/src/engine/: browse.rs  build.rs  mod.rs  query.rs  search.rs  slice.rs
crates/trace-core/src/flat/: archives.rs  convert.rs
crates/trace-core/src/query/: crypto.rs  dep_tree.rs  mod.rs  registers.rs  slice.rs  strings.rs
crates/trace-mcp/: Cargo.toml
crates/trace-mcp/src/: lib.rs  main.rs  tools.rs  types.rs
crates/trace-mcp/tests/: http_test.rs  integration_test.rs
crates/trace-parser/: Cargo.toml
crates/trace-parser/src/: def_use.rs  gumtrace.rs  insn_class.rs  lib.rs  parser.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  mcp.rs
src-tauri/src/commands/: mod.rs
src-web/: package-lock.json  package.json
src-web/src/: App.tsx
src-web/src/components/: McpIndicator.tsx  MemoryPanel.tsx  Minimap.tsx  PreferencesDialog.tsx  TraceTable.tsx
src-web/src/components/dep-tree/: DagGraphView.tsx
src-web/src/hooks/: useMcpStatus.ts  usePreferences.ts
src-web/src/utils/: platform.ts
