[package]
name = "trace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
trace-parser = { path = "../trace-parser" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
memmap2 = "0.9"
bitvec = { version = "1", features = ["serde"] }
bincode = "1"
rustc-hash = "2"
smallvec = { version = "1", features = ["union", "serde"] }
rayon = "1"
anyhow = "1"
sha2 = "0.10"
regex = "1"
memchr = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde_json = "1"
