[package]
name = "trace-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trace-cli"
path = "src/main.rs"

[dependencies]
trace-core = { path = "../trace-core" }
rmcp = { version = "1.2", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
axum = "0.8"
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
